added component styles to .motion{} class for framer-motion. Breakpoints 1,2 and 3 finished

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -2,7 +2,10 @@
 
 :root{
   --accent: tomato;
-  --backgroundColor: antiquewhite;
+  --backgroundColor: #fff1e0;
+  /* --backgroundColor: antiquewhite; */
+  --backgroundColor: lightgoldenrodyellow;
+  /* --backgroundColor: rgba(215, 250, 224, 0.521); */
   --highlight: #eee;
   /* --asdf: rgb(129, 112, 109); */
 }
