--- a/src/app.css
+++ b/src/app.css
@@ -13,7 +13,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   font: inherit;
   vertical-align: baseline;
   box-sizing: border-box;
-  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif */
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 
 }
 /* HTML5 display-role reset for older browsers */
